# hat

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Rocket.toml  codecov.yml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs  optotypes.rs
src/codes/: crc.rs  long.rs  mod.rs  short.rs
src/templates/: answers.html.tera  base.html.tera  code-form.html.tera  index.html.tera  scoring.html.tera
src/tests/: mod.rs  optotypes.rs
src/tests/codes/: long.rs  mod.rs  short.rs
static/fonts/: aukland-LICENSE  sloan-LICENSE
