[package]
name = "hat"
version = "0.1.0"
authors = ["Tom Wemyss <hat@to.mw>"]
edition = "2018"
description = "A tool for generated PDFs for home monitoring of vision. Do note that this is not a validated medical test."
readme = "README.md"
homepage = "https://homeacuitytest.org/"
repository = "https://github.com/twemyss/hat"
license-file = "LICENSE"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
ux = "0.1.3"
printpdf = "0.3.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "uuid", "tera_templates", "serve"]